# osxtlearn

./: CMakeLists.txt  OSXtlearn.icns  OSXtlearn.psd  README.markdown  index.html  stylesheet.css
examples/: xor.0.wts  xor.16000.wts  xor.2000.wts  xor.32000.wts  xor.4000.wts  xor.400000.wts  xor.5000.wts  xor.8000.wts  xor.cf  xor.data  xor.err  xor.prj  xor.teach
src/: activate.c  activate.h  arch.c  arch.h  arrays.c  arrays.h  cli.c  cli.h  compute.c  compute.h  error.h  general.h  general_X.h  parse.c  parse.h  subs.c  subs.h  update.c  update.h  weights.c  weights.h  xtlearn.c  xtlearn.h  xtlearnActDisp.c  xtlearnActDisp.h  xtlearnAlertBox.c  xtlearnAlertBox.h  xtlearnArchDisp.c  xtlearnArchDisp.h  xtlearnArchGlue.c  xtlearnArchGlue.h  xtlearnErrDisp.c  xtlearnErrDisp.h  xtlearnError.c  xtlearnIface.c  xtlearnIface.h  xtlearnWtsDisp.c  xtlearnWtsDisp.h
src/bitmaps/: README.bitmaps  checkedCB  checkedRB  grayStipple  horizIcon  tlearnIcon  uncheckedCB  uncheckedRB  vertIcon  vertIcon~  warningIcon
